# portopt

./: .gitignore  README.md  dashboard-quickref.md  pyproject.toml  setup.cfg
.github/workflows/: frontend-tests.yml
config/test_configs/: quick.ini  stress.ini  thorough.ini
docs/: CODE_OF_CONDUCT.md  README.md  documentation-improvement-summary.md  documentation-improvements-completed.md  documentation-plan.md  documentation-roadmap.md  index.md  portfolio-tutorial.md
docs/concepts/: black-litterman-tutorial.md  fundamentals.md  market-impact.md  optimization-challenges.md  portfolio-tutorial.md  risk-metrics.md
docs/developer-guides/: architecture-diagram.md  architecture.md  code-documentation-standards.md  contributing.md  documentation-testing.md  documentation.md  frontend-guide.md  implementing-solvers.md  testing.md  troubleshooting.md
docs/docs/: documentation-plan.md
docs/examples/: README.md  benchmark-examples.md  maximum-sharpe-ratio-portfolio.md  maximum-sharpe-ratio.md  minimum-variance-portfolio.md  quantum-examples.md  risk-parity-portfolio.md  risk-parity.md  sector-constraints.md  transaction-costs.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
examples/: black_litterman_example.py  compare_solvers.py  quantum_optimization.py
frontend/: jest.config.cjs  tailwind.config.ts  vite.config.ts
portopt/: __init__.py
reference/: api-reference.md
tests/: conftest.py  test_advanced_genetic.py  test_approximate_solver.py  test_base_solver.py  test_benchmark.py  test_black_litterman.py  test_classical_solver.py  test_constraint_adapter.py  test_constraint_types.py  test_constraints.py  test_factor.py  test_logging.py  test_problem.py  test_quantum_solver.py  test_solver_factory.py  test_solver_performance.py  test_types.py  utils.py
tools/: check_code_documentation.py  check_documentation_links.py  test_documentation.py  update_api_reference_links.py
(+84 files in other folders)
