[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "portopt"
description = "A testbed for portfolio optimization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Finance",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["portopt"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=portopt"
testpaths = ["tests"]

[tool.black]
line-length = 88

